# canada-visa-form-extraction

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  README.md  SETUP.md  api.py  conda_env.yml  conda_env_dev.yml  main.py  pyproject.toml  requirements.txt  sample.json  setup.cfg  setup.py
.github/workflows/: api-test.yml  doc-build.yml  docker-image.yml  publish-docs.yml  publish-to-pypi.yml  sdk-test.yml  test-build-docs.yml
cvfe/: main.py  version.py
cvfe/api/: __init__.py  apps.py  database.py  models.py
cvfe/api/convert/: __init__.py  adobe_xfa.py
cvfe/configs/: __init__.py
cvfe/configs/data/: iran-province-to-city.csv
cvfe/data/: constant.py  functional.py  pdf.py  preprocessor.py
docs/source/: conf.py  cvfe.api.convert.rst  cvfe.api.rst  cvfe.configs.rst  cvfe.data.rst  cvfe.rst  index.rst
src/cvfe/: __init__.py  main.py
src/cvfe/api/: __init__.py  apps.py
src/cvfe/api/convert/: __init__.py  adobe_xfa.py
src/cvfe/configs/: __init__.py
src/cvfe/configs/data/: canada-country-code-to-name.csv
src/cvfe/convert/: adobe_xfa.py
src/cvfe/data/: functional.py  preprocessor.py
src/cvfe/utils/: import_utils.py
tests/: conftest.py  test_main.py
tests/assets/filled/: response_fake_correct.json
tests/convert/: test_adobe_xfa.py
