[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cvfe"
authors = [{ name = "Nikan Doosti", email = "nikan.doosti@outlook.com" }]
description = "Canada Visa Forms (5257e and 5645e) Extractor."
readme = "README.md"
keywords = ["visa", "extractor", "canada", "5257e", "5645e"]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",

]

requires-python = ">=3.10.6"
dependencies = [
    "pip>=23.1.2",
    "xmltodict>=0.13.0",
    "pikepdf>=8.2.1",
    "pypdf>=3.17.0",
    "python-dateutil>=2.8.1",
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[project.optional-dependencies]
api = [
    "pydantic>=2.0.3",
    "fastapi>=0.100.0",
    "gunicorn>=21.2.0",
    "uvicorn>=0.23.1",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.0.2",
    "pyngrok>=6.0.0",
    "requests>=2.31.0",
]
format = ["pre-commit>=3.6.0"]
test = ["httpx>=0.24.1", "pytest>=7.4.0"]
doc = [
    "sphinx>=7.1.2",
    "sphinx-copybutton>=0.5.2",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=2.0.0",
    "furo>=2023.8.19",
]

[tool.setuptools]
include-package-data = true
[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
"*" = ["*.csv"]
[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.isort]
profile = "black"
line_length = 88
include_trailing_comma = true

[project.urls]
Homepage = "https://github.com/Nikronic/canada-visa-form-extraction"
