[metadata]
name = cvfe
version = attr: cvfe.version.VERSION
description = cvfe: Canada Visa Form Extraction!
long_description = file: README.md
long_description_content_type = text/markdown
author = Nikan Doosti
author_email = nikan.doosti@outlook.com
url = https://github.com/Nikronic/canada-visa-form-extraction
classifiers =
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE
    Operating System :: OS Independent
keywords = visa, extraction, canada, form
project_urls =
    Bug Tracker = https://github.com/Nikronic/canada-visa-form-extraction/issues
    Documentation = https://github.com/Nikronic/canada-visa-form-extraction/wiki
    Source Code = https://github.com/Nikronic/canada-visa-form-extraction

[options]
python_requires = >=3.11.0
install_requires =
    pip>=23.1.2
    pandas
    xmltodict>=0.13.0
    pikepdf>=5.1.5
    pypdf2>=2.2.1
    pydantic>=1.9.1
    fastapi>=0.85.0
    gunicorn>=20.1.0
    uvicorn>=0.18.2
    python-multipart>=0.0.5
    pydantic-settings
    pyngrok
packages = find:

[options.package_data]
cvfe.configs = **/*.csv
