[metadata]
name = cvfe
version = attr: cvfe.version.VERSION
description = cvfe: Canada Visa Form Extraction!
long_description = file: README.md
long_description_content_type = text/markdown
author = Nikan Doosti
author_email = nikan.doosti@outlook.com
url = https://github.com/Nikronic/canada-visa-form-extraction
classifiers =
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE
    Operating System :: OS Independent
keywords = visa, extraction, canada, form
project_urls =
    Bug Tracker = https://github.com/Nikronic/canada-visa-form-extraction/issues
    Documentation = https://github.com/Nikronic/canada-visa-form-extraction/wiki
    Source Code = https://github.com/Nikronic/canada-visa-form-extraction

[options]
python_requires = >=3.11.0
install_requires =
    pip>=23.1.2
    pandas>=1.5.3
    xmltodict>=0.13.0
    pikepdf>=8.2.1
    pypdf2>=3.0.1
    pydantic>=2.0.3
    fastapi>=0.100.0
    gunicorn>=21.2.0
    uvicorn>=0.23.1
    python-multipart>=0.0.6
    pydantic-settings>=2.0.2
    pyngrok>=6.0.0
    requests>=2.31.0
packages = find:

[options.package_data]
cvfe.configs = **/*.csv
